<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Inductive Bible Study</string>
    <string name="app_name_short">IBS</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_up_email">Sign Up by Email</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_setup_account">Setup Your Account</string>
    <string name="title_activity_footer_info">Information</string>
    <string name="title_activity_upgrade">Upgrade my Account</string>
    <string name="title_activity_share">Share Notes</string>
    <string name="title_activity_google_image_search">Google Image Search</string>
    <string name="title_activity_create_image">Create Image Marking</string>
    <string name="title_activity_twitter_login">Log in with Twitter</string>
    <string name="title_activity_twitter_share">Share with Twitter</string>
    <string name="title_activity_linked_in_share">Share with Linked In</string>
    <string name="title_activity_email_share">Share with Email</string>
    <string name="ibs_contentDescription_logo">Inductive Bible Study</string>
    <string name="ibs_contentDescription_social_email">E-mail</string>
    <string name="ibs_contentDescription_social_linkedin">Linked In</string>
    <string name="ibs_contentDescription_social_facebook">Facebook</string>
    <string name="ibs_contentDescription_social_googlePlus">Google Plus</string>
    <string name="ibs_contentDescription_social_twitter">Twitter</string>
    <string name="ibs_contentDescription_editProfile">Edit Profile</string>
    <string name="ibs_contentDescription_cancelChanges">Cancel changes</string>
    <string name="ibs_contentDescription_saveChanges">Save changes</string>
    <string name="ibs_contentDescription_editImage">Edit image</string>
    <string name="ibs_contentDescription_deleteImage">Delete image</string>
    <string name="ibs_contentDescription_deleteMarking">Delete Custom Marking</string>
    <string name="ibs_contentDescription_format_highlight">Highlight</string>
    <string name="ibs_contentDescription_format_image">Add Image</string>
    <string name="ibs_contentDescription_format_underline_single">Single underline</string>
    <string name="ibs_contentDescription_format_underline_double">Double underline</string>
    <string name="ibs_contentDescription_format_strikethrough">Strick through</string>
    <string name="ibs_contentDescription_format_outline">Outline</string>
    <string name="ibs_contentDescription_format_tag">Add tag</string>
    <string name="ibs_contentDescription_format_box_single">Single box</string>
    <string name="ibs_contentDescription_format_box_double">Double box</string>
    <string name="ibs_contentDescription_format_color">Set color</string>
    <string name="ibs_contentDescription_format_bold">Bold</string>
    <string name="ibs_contentDescription_format_italics">Italics</string>
    <string name="ibs_contentDescription_editTheme">Edit Chapter Theme</string>
    <string name="ibs_contentDescription_shareTheme">Share Chapter Theme</string>
    <string name="ibs_contentDescription_deleteTheme">Delete Chapter Theme</string>
    <string name="ibs_contentDescription_share">Share</string>
    <string name="ibs_contentDescription_delete">Delete</string>
    <string name="ibs_contentDescription_previousChapter">Previous Chapter</string>
    <string name="ibs_contentDescription_nextChapter">Next Chapter</string>
    <string name="ibs_contentDescription_poweredByGoogle">Powered by Google</string>
    <string name="ibs_contentDescription_profilePicture">Profile picture</string>
    <string name="ibs_contentDescription_readNote">Read note</string>
    <string name="ibs_contentDescription_viewImage">Open image marking</string>
    <string name="ibs_contentDescription_linkedIn_back">Cancel Button</string>
    <string name="ibs_contentDescription_twitter_back">Cancel Button</string>
    <string name="ibs_contentDescription_filterNotes">Filter notes</string>
    <string name="ibs_title_about">About Us</string>
    <string name="ibs_title_terms">Terms of Service</string>
    <string name="ibs_title_privacy">Privacy Policy</string>
    <string name="ibs_title_contact">Contact Us</string>
    <string name="ibs_title_setup_account">Set Up Your Account</string>
    <string name="ibs_title_congradulations">Congrats!</string>
    <string name="ibs_title_success">Success!</string>
    <string name="ibs_title_upgradeYourAccount">Upgrade my Account</string>
    <string name="ibs_title_addedit_image">Add/Edit Image</string>
    <string name="ibs_title_add_image">Add Image</string>
    <string name="ibs_title_edit_image">Edit Image</string>
    <string name="ibs_title_addedit_note">Add/Edit Note</string>
    <string name="ibs_title_edit_note">Edit Note</string>
    <string name="ibs_title_add_note">Add Note</string>
    <string name="ibs_title_createNewMarking">Create a New Marking</string>
    <string name="ibs_title_defineEdit_chapterTheme">Add/Edit Chapter Theme</string>
    <string name="ibs_title_add_chapterTheme">Add Chapter Theme</string>
    <string name="ibs_title_edit_chapterTheme">Edit Chapter Theme</string>
    <string name="ibs_title_defineEdit_divTheme">Define/Edit Division Theme</string>
    <string name="ibs_title_add_divTheme">Define Division Theme</string>
    <string name="ibs_title_edit_divTheme">Edit Division Theme</string>
    <string name="ibs_title_remove">Remove</string>
    <string name="ibs_title_customMarkings">Custom Markings</string>
    <string name="ibs_title_customMarkingsShort">Markings</string>
    <string name="ibs_title_removeNote">Remove Note</string>
    <string name="ibs_title_removeChapterTheme">Remove Chapter Theme</string>
    <string name="ibs_title_removeDivisionTheme">Remove Division Theme</string>
    <string name="ibs_title_pickTextColor">Select Text Color</string>
    <string name="ibs_title_pickHighlightColor">Select Highlight Color</string>
    <string name="ibs_title_pickEmailShare">Email with&#8230;</string>
    <string name="ibs_title_bookOfFormat">Book of <xliff:g id="book_name">%1$s</xliff:g></string>
    <string name="ibs_title_chapterWithTheme"><xliff:g id="chapter_name">%1$s</xliff:g> - <xliff:g id="chapter_theme">%2$s</xliff:g></string>
    <string name="ibs_title_twitter_shareHandle">\@<xliff:g id="twitter_handle">%1$s</xliff:g></string>
    <string name="ibs_title_strongsDef_strongsNum_word">Strong\'s <xliff:g id="strongs_number"
        >%1$s</xliff:g> &lt;i&gt; (<xliff:g id="word_defined">%2$s</xliff:g>) &lt;/i&gt;</string>
    <string name="ibs_title_strongsDef_strongsNum">Strong\'s <xliff:g id="strongs_number">%1$s</xliff:g></string>
    <string name="ibs_title_strongsDef_additional">Additional References</string>
    <string name="ibs_label_translations">Default Translation</string>
    <string name="ibs_label_about">Write some text about you:</string>
    <string name="ibs_label_booksInOrder">Books of the Bible in Canonical Order</string>
    <string name="ibs_label_oldTestament">Old Testament</string>
    <string name="ibs_label_newTestament">New Testament</string>
    <string name="ibs_label_book">Book</string>
    <string name="ibs_label_chapter">Chapter</string>
    <string name="ibs_label_verse">Verse</string>
    <string name="ibs_label_chapters">Chapters</string>
    <string name="ibs_label_themeApplied">Theme Applied</string>
    <string name="ibs_label_uploadFromGallery">Upload Image from Gallery</string>
    <string name="ibs_label_library">Select from Library</string>
    <string name="ibs_label_sortBy">Sort By</string>
    <string name="ibs_label_markingsToApply">Markings to apply:</string>
    <string name="ibs_label_useExistingMarking">Use an Existing Marking</string>
    <string name="ibs_label_definition">Definition</string>
    <string name="ibs_label_crossReferences">Cross References</string>
    <string name="ibs_label_verseDetails">View Verse Details</string>
    <string name="ibs_label_shareWith">Share with&#8230;</string>
    <string name="ibs_label_translationsSelected">Default Translation: <xliff:g id="version">%1$s</xliff:g></string>
    <string name="ibs_label_translationsAvailable">Available Translations:</string>
    <string name="ibs_label_translationsSet">Default Translation:</string>
    <string name="ibs_label_changePassword">Change Your Password:</string>
    <string name="ibs_label_shareLettering">Share Marking</string>
    <string name="ibs_label_deleteLettering">Remove Marking</string>
    <string name="ibs_label_linkedIn_shareWith">Share with:</string>
    <string name="ibs_label_linkedIn_sharePublic">Public</string>
    <string name="ibs_label_linkedIn_shareConnections">Connections</string>
    <string name="ibs_label_googleImageSearch_resultsFor">Results for \"<xliff:g id="query">%1$s</xliff:g>\"</string>
    <string name="ibs_label_searchResultsNumbered"
        ><xliff:g id="count">%1$s</xliff:g> results for \"<xliff:g id="query">%2$s</xliff:g>\"</string>
    <string name="ibs_label_searchingFor">Searching for \"<xliff:g id="query">%1$s</xliff:g>\"</string>
    <string name="ibs_label_verseDetails_wordStudy">Word Study</string>
    <string name="ibs_label_bibleSearch_narrowBy">Narrow search by:</string>
    <string name="ibs_label_bibleSearch_books">Book</string>
    <string name="ibs_label_bibleSearch_chapters">Chapter</string>
    <string name="ibs_label_bibleSearch_verseStart">From verse</string>
    <string name="ibs_label_bibleSearch_verseEnd">To verse</string>
    <string name="ibs_spinner_bibleSearch_all">All</string>
    <string name="ibs_hint_search">Search</string>
    <string name="ibs_hint_name">Name</string>
    <string name="ibs_hint_email">Email</string>
    <string name="ibs_hint_phone">Phone</string>
    <string name="ibs_hint_message">Message</string>
    <string name="ibs_hint_password">Password</string>
    <string name="ibs_hint_email_enter">Email</string>
    <string name="ibs_hint_password_unchanged">Password Unchanged</string>
    <string name="ibs_hint_password_choose">Choose Your Password</string>
    <string name="ibs_hint_password_repeat">Repeat Password</string>
    <string name="ibs_hint_name_first">First Name</string>
    <string name="ibs_hint_name_last">Last Name</string>
    <string name="ibs_hint_address">Address</string>
    <string name="ibs_hint_city">City</string>
    <string name="ibs_hint_state">State</string>
    <string name="ibs_hint_zip">Zip Code</string>
    <string name="ibs_hint_address_line1">Address</string>
    <string name="ibs_hint_address_line2">City, State, Zip</string>
    <string name="ibs_hint_about">Write something about yourself&#8230;</string>
    <string name="ibs_hint_image_name">Image name</string>
    <string name="ibs_hint_search_google_images">Search Google Images</string>
    <string name="ibs_hint_customMarking">Custom marking name</string>
    <string name="ibs_hint_enterYourText">Enter your text</string>
    <string name="ibs_radio_sort_recentlyUsed">recently used</string>
    <string name="ibs_radio_sort_byName">by name</string>
    <string name="ibs_checkbox_chapterThemes">Chapter themes</string>
    <string name="ibs_checkbox_divisionThemes">Division themes</string>
    <string name="ibs_checkbox_notes">Notes</string>
    <string name="ibs_checkbox_imageMarkings">Image markings</string>
    <string name="ibs_checkbox_letteringMarkings">Markings</string>
    <string name="ibs_button_submit">Submit</string>
    <string name="ibs_footer_home">Home</string>
    <string name="ibs_footer_about">About</string>
    <string name="ibs_footer_contact">Contact</string>
    <string name="ibs_footer_privacy">Privacy</string>
    <string name="ibs_footer_terms">Terms</string>
</resources>