<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/ibs_extra_horizontal_margin"
	    android:paddingRight="@dimen/ibs_extra_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    
	    tools:context="com.inductivebiblestudyapp.ui.ContactUsFragment"
	    android:fillViewport="true" 	    
	    >
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    
	    android:gravity="center_horizontal"
	    android:layout_gravity="center_horizontal"
	    
	    android:orientation="vertical"
	    >
	
	    <TextView
	        android:id="@+id/ibs_text_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/ibs_title_setup_account" 
	        style="@style/TitleText.Large"
	        android:layout_marginTop="@dimen/min_item_margin"
	        />
	    
	    <FrameLayout 
		         android:layout_width="match_parent"
			     android:layout_height="wrap_content"
			     android:minHeight="80dp"
			     
	        		android:layout_marginTop="@dimen/min_item_margin"
			        >
		
			         <ProgressBar
			             android:id="@+id/ibs_progress_bar_loading"
			             style="TextLoadingProgressBar"
			             android:layout_width="wrap_content"
			             android:layout_height="wrap_content"
			             android:layout_gravity="center" />
			
			     <TextView
	        android:id="@+id/ibs_setup_text"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="" 
	        style="@style/DescriptiveText"
	        
		        android:gravity="center"
	        />
	     </FrameLayout>
	     
	   

	    <EditText
	        android:id="@+id/ibs_setup_et_name_first"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="textPersonName"
	        android:hint="@string/ibs_hint_name_first"
	        style="@style/WhiteEditText"
	         >

	        <requestFocus />
	    </EditText>

	    <EditText
	        android:id="@+id/ibs_setup_et_name_last"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="textPersonName" 
	        android:hint="@string/ibs_hint_name_last"
	        style="@style/WhiteEditText"
	        />

	    <EditText
	        android:id="@+id/ibs_setup_et_address"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="textPostalAddress" 
	        android:hint="@string/ibs_hint_address"
	        style="@style/WhiteEditText"
	        />

	    <EditText
	        android:id="@+id/ibs_setup_et_city"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="textPostalAddress" 
	        android:hint="@string/ibs_hint_city"
	        style="@style/WhiteEditText"
	        />
	    
	    <EditText
	        android:id="@+id/ibs_setup_et_state"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="textPostalAddress" 
	        android:hint="@string/ibs_hint_state"
	        style="@style/WhiteEditText"
	        />
	    
	    <EditText
	        android:id="@+id/ibs_setup_et_zip"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="textPostalAddress" 
	        android:hint="@string/ibs_hint_zip"
	        style="@style/WhiteEditText"
	        />

	    <TextView
	        android:id="@+id/ibs_text_subtitle"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/ibs_label_translations" 
	        style="@style/SubText"
	        android:gravity="left"
	        android:layout_marginTop="@dimen/min_item_margin"
	        android:layout_marginLeft="@dimen/ibs_subtitle_margin_horizontal"
	        />
	    
	      <RadioGroup
	    	        android:id="@+id/ibs_setup_radiogroup_translations"
	    	        android:layout_width="match_parent"
	    	        android:layout_height="wrap_content"
	    	          android:layout_marginLeft="@dimen/ibs_subcheckbox_margin_horizontal"
	    	        />

	
	<Button
	        android:id="@+id/ibs_button_submit"
	        
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:layout_width="match_parent"
	        android:layout_height="@dimen/ibs_button_height"
	        android:text="@string/ibs_button_submit" 
	        android:layout_marginTop="@dimen/min_item_margin"
	        android:layout_marginBottom="@dimen/min_item_margin"
	        />
	
	
	</LinearLayout>
</ScrollView>

