<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/ibs_extra_horizontal_margin"
	    android:paddingRight="@dimen/ibs_extra_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    
	    tools:context="com.inductivebiblestudyapp.ui.ContactUsFragment" 	 
	    android:fillViewport="true"   
	    >
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    
	    android:gravity="center_horizontal"
	    android:layout_gravity="center_horizontal"
	    
	    android:orientation="vertical"
	    >
	
	    
	    <ImageView
	        android:id="@+id/ibs_img_logo"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/ic_logo"
			android:contentDescription="@string/ibs_contentDescription_logo"
			android:layout_marginTop="@dimen/min_item_margin"
			/>
	    
	    <TextView
	        android:id="@+id/ibs_text_contact_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/ibs_title_contact" 
	        style="@style/TitleText.Large"
	        android:layout_marginTop="@dimen/min_item_margin"
	        />
	  
	    <FrameLayout 
		         android:layout_width="match_parent"
			     android:layout_height="wrap_content"
			     android:minHeight="100dp"
			     
		        android:layout_marginTop="@dimen/ibs_home_item_margins"
			        >
		
			         <ProgressBar
			             android:id="@+id/ibs_progress_bar_loading"
			             style="TextLoadingProgressBar"
			             android:layout_width="wrap_content"
			             android:layout_height="wrap_content"
			             android:layout_gravity="center" />
			
		<TextView
	        android:id="@+id/ibs_contact_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="" 
	        style="@style/DescriptiveText"
	        />
			    
	     </FrameLayout>
	     
	   

	    <EditText
	        android:id="@+id/ibs_contact_et_name"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="textPersonName"
	        android:hint="@string/ibs_hint_name"
	        style="@style/WhiteEditText"
	         >

	        <requestFocus />
	    </EditText>

	    <EditText
	        android:id="@+id/ibs_contact_et_email"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="textEmailAddress" 
	        android:hint="@string/ibs_hint_email"
	        style="@style/WhiteEditText"
	        />

	    <EditText
	        android:id="@+id/ibs_contact_et_phone"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="phone" 
	        android:hint="@string/ibs_hint_phone"
	        style="@style/WhiteEditText"
	        />

	    <EditText
	        android:id="@+id/ibs_contact_et_message"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:gravity="top"
	        android:lines="5"
	        android:inputType="textMultiLine" 
	        android:hint="@string/ibs_hint_message"
	        style="@style/WhiteEditText"
	        />
	
	    <FrameLayout 
	        
	        android:layout_width="match_parent"
	        android:layout_height="@dimen/ibs_button_height"
	        android:layout_marginTop="@dimen/min_item_margin"
	        android:layout_marginBottom="@dimen/min_item_margin"
	        >
	<Button
	        android:id="@+id/ibs_button_submit"
	        
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:text="@string/ibs_button_submit" 
	        />
	
	 <ProgressBar
			             android:id="@+id/ibs_contact_progressbar_sending"
			             style="TextLoadingProgressBar"
			             android:layout_width="wrap_content"
			             android:layout_height="wrap_content"
			             android:layout_gravity="center"
			             android:visibility="gone" />
	</FrameLayout>
	
	    
	    <include layout="@layout/viewstub_footer"
    		android:id="@+id/ibs_footer"
	        android:layout_width="match_parent"
	        android:layout_gravity="bottom"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="@dimen/ibs_home_item_margins"	        
	        />
	
	</LinearLayout>
</ScrollView>
