<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content" 
	android:orientation="horizontal"
	android:gravity="center_vertical"
	>

	<TextView
	    android:id="@+id/ibs_sortBy_text_label"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/ibs_label_sortBy"
	    style="@style/SubText" 
	    android:labelFor="@+id/ibs_sortBy_radiogroup"
	    />
	<RadioGroup 
	    
		android:id="@+id/ibs_sortBy_radiogroup"
	    android:layout_width="0dp"
	    android:layout_height="wrap_content" 
	    android:orientation="horizontal"
	    android:layout_weight="1.0"
	    >
	
	    <RadioButton
	        android:id="@+id/ibs_sortBy_radioOption_byRecent"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:checked="true"
	        android:text="@string/ibs_radio_sort_recentlyUsed"
	        android:layout_weight="1.0"
	        android:layout_margin="4dp"
	        android:gravity="center"
	        android:background="@drawable/radio_accent_background"
	        android:button="@null"
	         />
	
	    <RadioButton
	        android:id="@+id/ibs_sortBy_radioOption_byName"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/ibs_radio_sort_byName" 
	        android:layout_weight="1.0"
	        android:layout_margin="4dp"
	        android:gravity="center"
	        android:background="@drawable/radio_accent_background"
	        android:button="@null"
	        />
	</RadioGroup>
</LinearLayout>
